# biocypher-cookiecutter-template

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  README.md  create_knowledge_graph.py  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/config/: biocypher_config.yaml  schema_config.yaml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/adapters/: __init__.py  {{cookiecutter.adapter_name}}.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_{{cookiecutter.adapter_name}}.py
